--- a/.classpath
+++ b/.classpath
@@ -2,18 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/itextpdf-5.5.7.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/pdfbox-2.0.8.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/fontbox-2.0.8.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/xmlworker-5.4.1.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/jackson-dataformat-xml-2.8.1.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/jackson-module-jaxb-annotations-2.8.1.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/woodstox-core-5.0.2.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/stax2-api-3.1.4.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/jackson-annotations-2.8.0.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/jackson-databind-2.8.8.jar"/>
-	<classpathentry kind="lib" path="/home/archie/withoutprint1/jackson-core-2.8.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jackson_api">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
@@ -22,5 +10,14 @@
 	<classpathentry kind="lib" path="C:/Users/shashank/Downloads/itextpdf-5.5.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/shashank/Downloads/xmlworker-5.4.1.jar" sourcepath="C:/Users/shashank/AppData/Local/Temp/.org.sf.feeling.decompiler1511890686078/source/xmlworker-5.4.1-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/pdfbox-2.0.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/fontbox-2.0.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/jackson-annotations-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/jackson-core-2.8.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/jackson-databind-2.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/jackson-dataformat-xml-2.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/jackson-module-jaxb-annotations-2.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/stax2-api-3.1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/shashank/Desktop/azx/woodstox-core-5.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
